--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "4.1.3",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-carousel": "0.15.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
